# markdown-viewer-rs

./: Cargo.toml  README.md  dist-workspace.toml
assets/: gh-dark.tmTheme
scripts/: bump-version.sh
src/: daemon.rs  main.rs  markdown.rs  server.rs  state.rs  template.rs  watcher.rs
