[package]
name = "markdown-viewer"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/jswent/markdown-viewer-rs"

[[bin]]
name = "mdview"
path = "src/main.rs"

[dependencies]
comrak = { version = "0.50", default-features = false, features = ["syntect"] }
syntect = "5.3"
notify = "6.1"
clap = { version = "4.5", features = ["derive"] }
tiny_http = "0.12"
open = "5.0"
crossbeam-channel = "0.5"

# Daemon and process management
nix = { version = "0.29", features = ["signal", "process", "fs"] }
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
signal-hook = "0.3"
fs2 = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
